various forms added

--- a/formularioavaluoprincipal.html
+++ b/formularioavaluoprincipal.html
@@ -148,13 +148,13 @@
                 <div class="col-md-12 text-center">
                     <div class="section-title">
                         <h2>Gracias por responder las preguntas a continuación.</h2>
-                        <h3>Con tus respuestas podremos decirte el verdadero valor de tu casa.s.</h3>
+                        <h3>Con tus respuestas podremos decirte el verdadero valor de tu casa.</h3>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
-                    <form name="avaluo" method="POST" netlify>
+                    <form name="avaluoprincipal" method="POST" netlify>
                         <div class="row list-input">
                             <div class="col-md-6">
                                 <div class="single-get-touch">
@@ -199,9 +199,6 @@
                                         <option value="seleccion">Selecciona una opción</option>
                                         <option value="apartmento">Apartamento</option>
                                         <option value="casa">Casa</option>
-                                        <option value="comercial">Comercial</option>
-                                        <option value="lote">Lote</option>
-                                        <option value="otro">Otro</option>
                                     </select>
                                 </div>
                             </div>
