--- a/formulariocreditodeavaluo.html
+++ b/formulariocreditodeavaluo.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,6 +33,7 @@
         ga('require', 'GTM-NFVD9HM');
         ga('send', 'pageview');
     </script>
+
     <!-- Facebook Pixel Code -->
     <script>
         !function(f,b,e,v,n,t,s)
@@ -61,7 +63,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="sitelogo">
-                            <a href="index.html"><img src="asset/img/LOGO.jpg" alt="" /></a>
+                            <a href="#"><img src="asset/img/LOGO.jpg" alt="" /></a>
                         </div>
                     </div>
                     <div class="col-md-8">
@@ -86,9 +88,6 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="single-address">
-                                <a href="formulariocredito.html" class="button btn btn-default btn-sm"><i class="fa fa-reply-all"></i> SOLICITAR CRÉDITO</a>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -100,16 +99,7 @@
                     <div class="col-md-11 col-lg-11">
                         <div id="cssmenu">
                             <ul>
-                                <li><a href="index.html">Inicio</a>
-                                </li>
-                                <li><a href="index.html#FAQ">Preguntas Frecuentes</a></li>
-                                <li><a href="#">Servicios</a>
-                                    <ul>
-                                        <li><a href="formulariocredito.html">Crédito con garantia</a></li>
-                                        <li><a href="formularioavaluoprincipal.html">Avaluo gratis</a></li>
-                                    </ul>
-                                </li>
-                                <li><a href="contact.html">Contáctanos</a></li>
+                                <li><a href="apoyo.creditoandino@gmail.com">Solicitar ayuda</a></li>
                             </ul>
                         </div>
                     </div>
@@ -124,15 +114,21 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="section-title">
-                        <h2>Responde las siguientes preguntas y uno de nuestros agentes se comunicara contigo.</h2>
-                        <h3>Recuerda, en tan solo 72 horas podras tener el dinero que necesitas.*</h3>
+                        <h2>Gracias por responder las preguntas a continuación.</h2>
+                        <h3>Despues de que recibamos tu formulario uno de nuestros agentes se comunicara contigo en máximo 24 horas.</h3>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
-                    <form name="credito" action="thank-you.html" method="POST" netlify>
+                    <form name="creditodeavaluo" method="POST" netlify>
                         <div class="row list-input">
+                            <div class="col-md-6">
+                                <div class="single-get-touch">
+                                    <label for="codigoprestamo">Codigo Avaluo</label>
+                                    <input type="number" name="codigoavaluo" placeholder="Codigo" required>
+                                </div>
+                            </div>
                             <div class="col-md-6 mr0">
                                 <div class="single-get-touch">
                                     <label for="nombre">Nombre</label>
@@ -247,70 +243,6 @@
                             </div>
                         </div>
                     </form>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="services-page">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="services-details">
-                        <div class="services-thumb-lg">
-                            <img src="asset/img/services-lg.jpg" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <h2>¿Porqué pedimos el numero de tu Certificado de tradición y libertad?</h2>
-                    <p>Este numero lo pedimos ya que con el podemos nosotros obtener una copia del certificado y realizar el estudio de títulos necesario para determinar si tu inmueble cumple con todos los requisitos para ser utilizado como garantía en tu préstamo.</p>
-                    <p>Si tienes tu certificado disponible puedes enviarlo cuando nuestros agentes se comuniquen contigo.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- start footer area -->
-    <section class="footer-area section-padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-lg-4">
-                    <div class="footer-widget" >
-                        <div class="footer-title">
-                            <img src="asset/img/hipo.png" alt="" />
-                        </div>
-                        <p>CreditoAndino es una manera diferente de concebir nuestra relación con el dinero, nuestro objetivo es ayudarte a ti a cumplir tus sueños.</p>
-                        <div class="mail">
-                            <span>Preguntas :</span><a href="apoyo.creditoandino@gmail.com">apoyo.creditoandino@gmail.com</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-lg-3">
-                    <div class="footer-widget pages-widget">
-                        <div class="footer-title">
-                            <h4>Soluciones</h4>
-                        </div>
-                        <ul>
-                            <li><a href="formulariocredito.html">Formulario crédito de libre inversión</a></li>
-                            <li><a href="politica.html">Política del tratamiento de la información</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-widget">
-                        <div class="footer-title">
-                            <h4>Newsletter</h4>
-                        </div>
-                        <div class="form-widget">
-                            <p>Entérate de nuestras ofertas y lanzamientos exclusivos</p>
-                            <form name="newsletter" action="thank-you.html" method="POST" netlify>
-                                <div class="newsletter">
-                                    <label for="envalope" class="fa fa-envelope"></label>
-                                    <input id="envalope" type="email" name="email" placeholder="Correo electrónico">
-                                </div>
-                                <button type="submit" class="button btn btn-default btn-lg">Subscríbete</button>
-                            </form>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
