--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="get-consultation-content">
                         <h4>¿Sabes el verdadero valor de tu casa?</h4>
                         <h2>Completa el formulario y recibe tu avaluo gratis.</h2>
-                        <a href="formulariocredito.html" class="button btn btn-default btn-sm">INICIAR</a>
+                        <a href="formularioavaluoprincipal.html" class="button btn btn-default btn-sm">INICIAR</a>
                     </div>
                 </div>
             </div>
