--- a/formularioavaluoprincipal.html
+++ b/formularioavaluoprincipal.html
@@ -108,7 +108,7 @@
                                 <li><a href="#">Servicios</a>
                                     <ul>
                                         <li><a href="formulariocredito.html">Crédito de libre inversión con hipoteca</a></li>
-                                        <li><a href="formularioavaluoprincipal.html">Avaluo gratis</a></li>
+                                        <li><a href="formularioavaluoprincipal.html">Avalúo gratis</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contáctanos</a></li>
@@ -130,7 +130,7 @@
                             <div class="col-md-12 text-center">
                                 <div class="main-slider-welcome-text">
                                     <div class="slider-cell">
-                                        <h2 class="sub-title">Completamente gratis y en menos de un minuto</h2>
+                                        <h2 class="sub-title">El mercado es complicado, conocer el valor de tu casa no deberia serlo.</h2>
                                         <h2 class="main-title">El valor de tu casa con un solo click</h2>
                                     </div>
                                 </div>
@@ -147,8 +147,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <div class="section-title">
-                        <h2>Gracias por responder las preguntas a continuación.</h2>
-                        <h3>Con tus respuestas podremos decirte el verdadero valor de tu casa.</h3>
+                        <h2>Las preguntas a continuación ayudaran a nuestros sistema a determinar el valor real de tu casa.</h2>
                     </div>
                 </div>
             </div>
@@ -188,7 +187,7 @@
                             </div>
                             <div class="col-md-6 mr0">
                                 <div class="single-get-touch">
-                                    <label for="Area">Area</label>
+                                    <label for="Area">Área</label>
                                     <input type="number" name="area" placeholder="¿Qué área tiene (M2)?" required>
                                 </div>
                             </div>
@@ -365,7 +364,7 @@
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox">No
-                                        <input type="checkbox" name="no">
+                                        <input type="checkbox" name="No">
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
