--- a/landingpage2.html
+++ b/landingpage2.html
@@ -335,7 +335,7 @@
                             </div>
                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                                 <div class="card-body">
-                                    La decisión de préstamo toma 15 minutos. Se necesita un día más para realizar el avaluo y preparar todos los documentos necesarios. Tomará 3 días más establecer formalmente la hipoteca, y luego recibirás el dinero en tu cuenta bancaria.
+                                    La decisión de préstamo toma 15 minutos. Se necesita un día más para realizar el avalúo y preparar todos los documentos necesarios. Tomará 3 días más establecer formalmente la hipoteca, y luego recibirás el dinero en tu cuenta bancaria.
                                 </div>
                             </div>
                         </div>
