--- a/formulariocreditodeavaluo.html
+++ b/formulariocreditodeavaluo.html
@@ -125,7 +125,7 @@
                         <div class="row list-input">
                             <div class="col-md-6">
                                 <div class="single-get-touch">
-                                    <label for="codigoprestamo">Codigo Avaluo</label>
+                                    <label for="codigoprestamo">Codigo Avalúo</label>
                                     <input type="number" name="codigoavaluo" placeholder="Codigo" required>
                                 </div>
                             </div>
