--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <li><a href="#">Servicios</a>
                                     <ul>
                                         <li><a href="formulariocredito.html">Crédito con garantia</a></li>
-                                        <li><a href="formularioavaluoprincipal.html">Avaluo gratis</a></li>
+                                        <li><a href="formularioavaluoprincipal.html">Avalúo gratis</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contáctanos</a></li>
@@ -201,7 +201,7 @@
                 <div class="col-md-8 text-center">
                     <div class="get-consultation-content">
                         <h4>¿Sabes el verdadero valor de tu casa?</h4>
-                        <h2>Completa el formulario y recibe tu avaluo gratis.</h2>
+                        <h2>Completa el formulario y recibe tu avalúo gratis.</h2>
                         <a href="formularioavaluoprincipal.html" class="button btn btn-default btn-sm">INICIAR</a>
                     </div>
                 </div>
@@ -450,7 +450,7 @@
                             </div>
                             <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                                 <div class="card-body">
-                                    La decisión de préstamo toma 15 minutos. Se necesita un día más para realizar el avaluo y preparar todos los documentos necesarios. Tomará 3 días más establecer formalmente la hipoteca, y luego recibirás el dinero en tu cuenta bancaria.
+                                    La decisión de préstamo toma 15 minutos. Se necesita un día más para realizar el avalúo y preparar todos los documentos necesarios. Tomará 3 días más establecer formalmente la hipoteca, y luego recibirás el dinero en tu cuenta bancaria.
                                 </div>
                             </div>
                         </div>
