--- a/thank-you.html
+++ b/thank-you.html
@@ -108,7 +108,7 @@
                                 <li><a href="#">Servicios</a>
                                     <ul>
                                         <li><a href="formulariocredito.html">Crédito con garantia</a></li>
-                                        <li><a href="formularioavaluoprincipal.html">Avaluo gratis</a></li>
+                                        <li><a href="formularioavaluoprincipal.html">Avalúo gratis</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="contact.html">Contáctanos</a></li>
