Revert "Update Avaluo"
This reverts commit 080c3c0487d187b47cd896d768e4967978f6baac.

--- a/formularioavaluoprincipal.html
+++ b/formularioavaluoprincipal.html
@@ -179,38 +179,22 @@
                                     <input type="number" name="telefono" id="telefono" placeholder="Teléfono" required>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="single-get-touch">
-                                    <label for="ciudad">Ciudad</label>
-                                    <select name="ciudad" id="ciudad" required>
-                                        <option value="seleccion">Selecciona una opción</option>
-                                        <option value="Barranquilla">Barranquilla</option>
-                                        <option value="Bogotá D.C.">Bogotá D.C.</option>
-                                        <option value="Bucaramanga">Bucaramanga</option>
-                                        <option value="Cartagena de Indias">Cartagena</option>
-                                        <option value="Chía">Chía</option>
-                                        <option value="Envigado">Envigado</option>
-                                        <option value="Manizales">Manizales</option>
-                                        <option value="Medellín">Medellín</option>
-                                    </select>
-                                </div>
-                            </div>
                             <div class="col-md-6 mr0">
                                 <div class="single-get-touch">
                                     <label for="Dirección">Dirección</label>
-                                    <input type="text" name="direccion" placeholder="Dirección" id="direccion" required>
+                                    <input type="text" name="direccion" placeholder="Dirección" required>
                                 </div>
                             </div>
                             <div class="col-md-6 mr0">
                                 <div class="single-get-touch">
                                     <label for="Area">Área</label>
-                                    <input type="number" name="area" id="area" placeholder="¿Qué área tiene (M2)?" required>
+                                    <input type="number" name="area" placeholder="¿Qué área tiene (M2)?" required>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="single-get-touch">
                                     <label for="tipo">¿Qué tipo de inmueble es?</label>
-                                    <select name="tipo" id="tipo" required>
+                                    <select name="tipo" required>
                                         <option value="seleccion">Selecciona una opción</option>
                                         <option value="apartmento">Apartamento</option>
                                         <option value="casa">Casa</option>
@@ -220,7 +204,7 @@
                             <div class="col-md-6">
                                 <div class="single-get-touch">
                                     <label for="estrato">¿En qué estrato esta ubicado?</label>
-                                    <select name="estrato" id="estrato" required>
+                                    <select name="estrato" required>
                                         <option value="seleccion">Selecciona una opción</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
@@ -234,13 +218,13 @@
                             <div class="col-md-6">
                                 <div class="single-get-touch">
                                     <label for="piso">¿En qué piso queda?</label>
-                                    <input type="number" name="area" id="piso" placeholder="Numero piso" required>
+                                    <input type="number" name="area" placeholder="Numero piso" required>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="single-get-touch">
                                     <label for="niveles">¿Cuántos niveles tiene?</label>
-                                    <select name="niveles" id="niveles" required>
+                                    <select name="nivelesn" required>
                                         <option value="seleccion">Selecciona una opción</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
@@ -251,7 +235,7 @@
                             <div class="col-md-6">
                                 <div class="single-get-touch">
                                     <label for="habitaciones">¿Cuántas habitaciones?</label>
-                                    <select name="habitaciones"  id="habitaciones" required>
+                                    <select name="habitaciones" required>
                                         <option value="seleccion">Selecciona una opción</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
@@ -263,7 +247,7 @@
                             <div class="col-md-6">
                                 <div class="single-get-touch">
                                     <label for="baños">¿Cuántos baños?</label>
-                                    <select name="baños" id="banos" required>
+                                    <select name="baños" required>
                                         <option value="seleccion">Selecciona una opción</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>
@@ -286,7 +270,7 @@
                             <div class="col-md-6">
                                 <div class="single-get-touch">
                                     <label for="ascensores">¿Cuántos ascensores?</label>
-                                    <select name="garajes" id="garajes" required>
+                                    <select name="garajes" required>
                                         <option value="seleccion">Selecciona una opción</option>
                                         <option value="0">0</option>
                                         <option value="1">1</option>
@@ -299,75 +283,75 @@
                             <div class="col-md-6">
                                 <div class="single-get-touch">
                                     <label for="tiempo">¿Cuál es el tiempo de construido?</label>
-                                    <select name="tiempo" id="tiempo" required>
+                                    <select name="tiempo" required>
                                         <option value="seleccion">Selecciona una opción</option>
-                                        <option value="En Construcción">En Construcción</option>
-                                        <option value="Para Estrenar">Para Estrenar</option>
-                                        <option value="Sobre Plano">Sobre Plano</option>
-                                        <option value="Entre 0 y 5 años">Entre 0 y 5 años</option>
-                                        <option value="Entre 5 y 10 años">Entre 5 y 10 años</option>
-                                        <option value="Entre 10 y 20 años">Entre 10 y 20 años</option>
-                                        <option value="Más de 20 años">Más de 20 años</option>
+                                        <option value="1">Sobre plano</option>
+                                        <option value="2">En construcción</option>
+                                        <option value="3">Para estrenar</option>
+                                        <option value="4">0-5 años</option>
+                                        <option value="5">5-10 años</option>
+                                        <option value="6">10-20 años</option>
+                                        <option value="7">20+</option>
                                     </select>
                                 </div>
                             </div>
                             <div class="col-md-12">
                                 <p>¿Tu inmueble cuenta con lo siguiente? (selecciona de las siguientes opciones)</p>
-                                <div class="single-get-check" name="adcionales" required>
+                                <div class="single-get-check" name="tiempo" required>
                                     <label class="radiobox">Balcon
-                                        <input type="checkbox" name="balcon" id="balcon">
+                                        <input type="checkbox" name="balcon">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox">Baño servicio
-                                        <input type="checkbox" name="banoservicio" id="banoservicio">
+                                        <input type="checkbox" name="banoservicio">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox"> Club House
-                                        <input type="checkbox" name="clubhouse" id="clubhouse">
+                                        <input type="checkbox" name="clubhouse">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox"> Estudio
-                                        <input type="checkbox" name="estudio" id="estudio">
+                                        <input type="checkbox" name="estudio">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox">Deposito
-                                        <input type="checkbox" name="deposito" id="deposito"">
+                                        <input type="checkbox" name="deposito">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox"> Habitación servicio
-                                        <input type="checkbox" name="habitacionservicio" id="habitacionservicio">
+                                        <input type="checkbox" name="habitacionservicio">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox">Hall de alcobas
-                                        <input type="checkbox" name="hall" id="hall">
+                                        <input type="checkbox" name="hall">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox">Lavanderia
-                                        <input type="checkbox" name="lavanderia" id="lavanderia">
+                                        <input type="checkbox" name="lavanderia">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox">Parqueaderos separados
-                                        <input type="checkbox" name="parqueaderoseparado" id="parqueaderoseparado">
+                                        <input type="checkbox" name="parqueaderoseparado">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox">Porteria
-                                        <input type="checkbox" name="porteria" id="porteria">
+                                        <input type="checkbox" name="porteria">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox">Remodelado
-                                        <input type="checkbox" name="remodelado" id="remodelado">
+                                        <input type="checkbox" name="remodelado">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox">Salon Comunal
-                                        <input type="checkbox" name="saloncomunal" id="saloncomunal">
+                                        <input type="checkbox" name="saloncomunal">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox">Terraza
-                                        <input type="checkbox" name="terraza" id="terraza">
+                                        <input type="checkbox" name="terraza">
                                         <span class="checkmark"></span>
                                     </label>
                                     <label class="radiobox">Vista exterior
-                                        <input type="checkbox" name="vistaexterior" id="vistaexterior">
+                                        <input type="checkbox" name="vistaexterior">
                                         <span class="checkmark"></span>
                                     </label>
                                 </div>
@@ -387,71 +371,13 @@
                             </div>
                             <div class="col-md-12">
                                 <div class="single-get-touch">
-                                    <button type="submit" name="submit" class="btn btn-default btn-sm btn-request-api">ENVIAR</button>
-                                    <img class="loading" src="asset/img/loading.gif" alt="" style="display: none;">
+                                    <button type="submit" name="submit" class="btn btn-default btn-sm">ENVIAR</button>
                                 </div>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
-        </div>
-        <div class="container respuesta-servicio" style="display: none;">
-            <div class="row">
-                <div class="col-md-6 text-right">
-                    <div class="single-get-touch">
-                        <button class="btn btn-primary btn-sm btn-venta">Venta</button>
-                    </div>
-                </div>
-                <div class="col-md-6 text-left">
-                    <div class="single-get-touch">
-                        <button class="btn btn-default btn-sm btn-arriendo">Arriendo</button>
-                    </div>
-                </div>
-            </div>
-            <br>
-            <div class="row info_table">
-                <div class="col-md-4 border-recuadro data venta">
-                    <div class="single-get-touch">
-                        <small class="text-left">Valor de tu casa</small>
-                        <dd class="text-left valor valor-recuadro"></dd>
-                    </div>
-                </div>
-                <div class="col-md-4 border-recuadro data arriendo" style="display: none;">
-                    <div class="single-get-touch">
-                        <small class="text-left">Valor arriendo de tu casa</small>
-                        <dd class="text-left valor valor-arriendo-recuadro"></dd>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12"><hr></div>
-                <div class="col-md-12 text-center text-uppercase">
-                    <h4>detalles de hogar</h4>
-                </div>
-                <div class="col-md-12">
-                    <h5 class="text-left">Tipo de Vivienda</h5>
-                    <dl class="col-md-6" style="display: inline-block">
-                        <dt><i class="fa fa-map-marker" aria-hidden="true"></i> Dirección: <span class="no-bold direccion"></span></dt>
-                        <dt><i class="fa fa-building" aria-hidden="true"></i> Ciudad: <span class="no-bold ciudad"></span></dt>
-                        <dt>Estrato: <span class="no-bold estrato"></span></dt>
-                        <dt><i class="fa fa-bed" aria-hidden="true"></i> Habitaciones: <span class="no-bold habitaciones"></span></dt>
-                        <dt><i class="fa fa-car" aria-hidden="true"></i> Garaje: <span class="no-bold garajes"></span></dt>
-                    </dl>
-                    <dl class="col-md-5" style="display: inline-block">
-                        <dt><i class="far fa-cube" aria-hidden="true"></i> Aréa: <span class="no-bold area"></span></dt>
-                        <dt><i class="fa fa-history" aria-hidden="true"></i> Tiempo de Construido: <span class="no-bold tiempo"></span></dt>
-                        <dt><i class="fa fa-bath" aria-hidden="true"></i> Baños: <span class="no-bold banos"></span></dt>
-                        <dt>Niveles:<span class="no-bold niveles"></span></dt>
-                    </dl>
-                </div>
-                <div class="col-md-12 text-center">
-                    <button class="btn-default btn btn-sm" onclick="window.location.href='formulariocredito.html'">Solicitad tu crédito</button>
-                    <button class="btn btn-default btn-sm" onclick="window.print();">Imprimir</button>
-                </div>
-
-            </div>
-            <div class="row"></div>
         </div>
     </section>
     <!-- start footer area -->
