--- a/formularioavaluo.html
+++ b/formularioavaluo.html
@@ -121,7 +121,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
-                    <form name="avaluo" method="POST" netlify>
+                    <form name="avaluo" method="POST" action="thank-you.html" netlify>
                         <div class="row list-input">
                             <div class="col-md-6">
                                 <div class="single-get-touch">
