--- a/formularioavaluoprincipal.html
+++ b/formularioavaluoprincipal.html
@@ -153,7 +153,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10">
-                    <form name="avaluoprincipal" method="POST" netlify>
+                    <form name="avaluoprincipal" method="POST" action="thank-you.html" netlify>
                         <div class="row list-input">
                             <div class="col-md-6">
                                 <div class="single-get-touch">
